--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
         "build": "npm-run-all build:* test",
         "build:clean": "rimraf dist && mkdirp dist",
         "build:copy": "copyfiles -a -u 1 -e \"**/sass/**/*\" -e \"**/.gitkeep\" \"src/**/*\" dist",
-        "build:sass": "sass --style=compressed --no-source-map src/sass:dist/css",
+        "build:sass": "sass src/sass:dist/css",
         "build:autoprefixer": "postcss dist/css/*.css --use autoprefixer -d dist/css",
         "build-dev": "npm-run-all build-dev:sass build:autoprefixer",
-        "build-dev:sass": "sass --style=expanded --source-map src/sass:dist/css",
+        "build-dev:sass": "sass src/sass:dist/css",
         "watch": "npm-run-all build build-dev -p watch:*",
         "watch:browsersync": "browser-sync start --server dist --files \"dist/**/*\"",
         "watch:sassprefixer": "onchange \"src/sass/**/*.scss\" -- npm run build-dev",
@@ -42,7 +42,7 @@
         "postcss-cli": "^8.3.1",
         "postcss-scss": "^4.0.4",
         "rimraf": "^3.0.2",
-        "sass": "^1.44.0",
+        "sass": "^1.70.0",
         "stylelint": "^14.11.0",
         "stylelint-config-standard-scss": "^5.0.0",
         "stylelint-scss": "^4.3.0"
