--- a/package.json
+++ b/package.json
@@ -49,6 +49,6 @@
         "stylelint-scss": "^4.3.0"
     },
     "dependencies": {
-        "json-server": "^1.0.0-alpha.23"
+        "json-server": "^0.17.4"
     }
 }
