--- a/src/db/app.json
+++ b/src/db/app.json
@@ -206,7 +206,7 @@
     "events": [
       {
         "id": 1,
-        "date": "2024-04-01",
+        "date": "2024-03-06",
         "hour": "12:30",
         "table": 1,
         "repeat": false,
@@ -216,7 +216,7 @@
       },
       {
         "id": 2,
-        "date": "2024-04-01",
+        "date": "2024-03-05",
         "hour": "16:00",
         "table": 3,
         "repeat": "daily",
@@ -226,7 +226,7 @@
       },
       {
         "id": 3,
-        "date": "2024-04-01",
+        "date": "2024-03-05",
         "hour": "12:00",
         "table": 3,
         "repeat": "daily",
@@ -236,7 +236,7 @@
       },
       {
         "id": 4,
-        "date": "2024-04-01",
+        "date": "2024-03-05",
         "hour": "13:00",
         "table": 2,
         "repeat": "daily",
@@ -246,7 +246,7 @@
       },
       {
         "id": 5,
-        "date": "2024-04-01",
+        "date": "2024-03-05",
         "hour": "18:00",
         "table": 2,
         "repeat": "daily",
@@ -255,6 +255,16 @@
         "starters": ["lemonWater"]
       }
     ],
-    "bookings": []
+    "bookings": [
+      {
+      "id": 1,
+      "date": "2024-03-05",
+      "hour": "19:00",
+      "table": 1,
+      "duration": 1,
+      "ppl": 3,
+      "starters": ["bread", "lemonWater"]
+    }
+   ]
    
  }
